workloads/probe/deployment.yaml
# Deployment psi-probe
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psi-probe
  labels:
    app: psi-probe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: psi-probe
  template:
    metadata:
      labels:
        app: psi-probe
    spec:
      containers:
      - name: psi-probe
        image: kube-registry.mapa.es/psi-probe:3.5.1
        ports:
        - containerPort: 8080
